htdocs/t/index.css
/*index page*/

#index-page #main-wrapper { width: 964px; }

.box { padding: 1px 1px 0 1px; background: #fff; border: solid 1px #c0c0c0; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
.box .body { width: 100%; height: 100%; background: #fff url(/t/bg/body/body-wrapper.png) repeat-x scroll 0 0; overflow: hidden; }

#index-page #promo { width:962px; padding: 0; }
#index-page #promo .viewport,
#index-page #promo .point { width: 962px; height: 450px; background: #CCC url(/t/loader-gray.gif) no-repeat scroll center center; }
#index-page #promo .viewport { z-index: 1; }
#index-page #promo .viewport .surface { width: 32000px; }
#index-page #promo .point { float: left; color: #ccc;}
#index-page #promo-prev,
#index-page #promo-next { display:none; cursor:pointer; position:absolute; top:193px; width: 29px; height:64px; background: transparent url(/t/bg/index/arrows.png) no-repeat; }
#index-page #promo-next { background-position: -29px 0; left:933px;}
#index-page #promo-prev { left:0px; }

#index-page .info-blocks { margin: 21px 0 0 0px; }
#index-page .info-blocks .box { float: left; width: 221px; height: 157px; overflow: hidden; margin-right: 21px; }
#index-page .info-blocks .last { margin-right: 0; }

#index-page .info-blocks a { font-size: 11px; text-decoration:none }
#index-page .info-blocks a:hover { text-decoration:underline }
#index-page .info-blocks dt { text-align: center; padding: 11px 0 0 0; }
#index-page .info-blocks dt b { font-size: 14px; color: #343b40; font-family: Arial; font-weight: normal;}
#index-page .info-blocks dd { height: 130px; width: 100%; }
#index-page .info-blocks .simple dd a { display: block; text-align: center; height: 95px; background: no-repeat center center; }
#index-page .info-blocks .simple dd a span { display: block; padding-top: 96px; }
#index-page .info-blocks .simple dd a img { display: block; }

/* more in cocktail */
.programica-rolling-images { position: relative; }
.programica-rolling-images .viewport { overflow: hidden; position: relative; z-index: 1; }
.programica-rolling-images .viewport .surface { padding: 0; margin: 0; }

#index-page .info-blocks .prev { left: 20px; }
#index-page .info-blocks .next { right: 20px; }
                        
#index-page .info-blocks .viewport { margin: 0 35px; width: 151px; }
#index-page .info-blocks .viewport .surface { width: 10000px; }
#index-page .info-blocks .point { float: left; width: 151px; }
#index-page .info-blocks { width: 100%; height: 100%; }
                        
#index-page .info-blocks .point a { display: block; text-align: center; }
#index-page .info-blocks .point a img { display: block; margin: 8px auto; }


<!--# if expr="$HTTP_USER_AGENT = /MSIE 6/" -->
#index-page .info-blocks .point a img {scrollbar-base-color:expression((runtimeStyle.scrollbarBaseColor="transparent")&&(offsetWidth?(runtimeStyle.width=offsetWidth+'px'):1)&&(offsetHeight?(runtimeStyle.height=offsetHeight+'px'):1)&&(runtimeStyle.filter=(runtimeStyle.filter?runtimeStyle.filter+';':'')+'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="'+src+'",sizingMethod="image")')&&(src='/t/0.png'));}
<!--# endif -->

